--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -12,6 +12,7 @@
     width: 100%;
     height: 100vh;
 }
+
 .auth_heading{
     color: #03014C;
     font-size: 33px;
@@ -66,7 +67,7 @@
     text-decoration: none;
     cursor: pointer;
 }
-/* .login_img img{
+.login_img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -76,7 +77,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-} */
+}
 .input_pass{
     position: relative;
 }
