--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,5 +1,43 @@
-.sidebar{
-    width: 100%;
-    background-color: red;
+.sidebarBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #5F35F5 ;
+    align-items: center;
+    padding: 50px 0;
     height: 100vh;
+}
+.img_box{
+    height: 100px;
+    width: 100px;
+    background-color: red;
+    border-radius: 50%;
+}
+.logout{
+    padding: 15px 50px;
+    background-color: #FFF;
+    color: #5F35F5;
+    font-size: 22px;
+    font-weight: 700;
+    /* line-height: 150%; */
+    border: 0;
+    border-radius: 10px ;
+    cursor: pointer;
+}
+.navigation{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.navigation li a{
+    color: #FFF;
+    padding: 20px 65px;
+    border-radius: 20px;
+}
+.navigation li a svg{
+    font-size: 50px;
+}
+.navigation li a.active{
+    background-color: #FFF;
+    color: #5F35F5;
 }
