--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+ul,ol{
+    list-style-type: none;
+}
+a{
+    display: inline-block;
 }
