--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -41,3 +41,9 @@
     background-color: #FFF;
     color: #5F35F5;
 }
+.username{
+    color: #FFF;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 20px;
+}
