--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,93 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
 }
 ul,ol{
     list-style-type: none;
 }
 a{
     display: inline-block;
+}
+
+.groupcard{
+    width: 480px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 25px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+}
+.outletbox{
+    padding: 30px;
+}
+.group_heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.group_heading h4{
+    color: #000;
+    font-size: 20px;
+}
+.group_heading .dots{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(198, 198, 198);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.userimg_box{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: rgb(81, 78, 78);
+    overflow: hidden;
+}
+.userimg_box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.usermainbox{
+    margin-top: 17px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    overflow-y: scroll;
+    height: 350px;
+}
+.usermainbox::-webkit-scrollbar{
+    width: 10px;
+}
+.useritem{
+    padding-bottom: 13px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.322);
+    display: flex;
+    column-gap: 14px;
+    align-items: center;
+}
+.useritem:last-child{
+    border-bottom: 0;
+}
+.userinfobox{
+    flex-basis: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.addbutton{
+    padding: 10px;
+    border: 0;
+    background-color:#5F35F5;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.home_wrapper{
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
 }
