--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -6,6 +6,10 @@
     align-items: center;
     padding: 50px 0;
     height: 100vh;
+    width: 300px;
+    position: fixed;
+    left: 0;
+    top: 0;
 }
 .img_box{
     height: 100px;
